# nessi

./: CMakeLists.txt  README.md
Include/Core/: CPU.hpp  Registers.hpp
Include/Disassembler/: Disassembler.hpp
Include/Firmware/: Firmware.hpp
Include/Memory/: Memory.hpp
Include/VirtualMachine/: Instructions.hpp
Source/Disassembler/: Disassembler.cpp
Source/Firmware/: Firmware.cpp
Source/Nessi/: CommandLine.cpp  Main.cpp
Source/VirtualMachine/: Instructions.cpp
source/dotnes/: dotnes.cpp  dotnes.hpp
source/nessi/: cli.hpp  main.cpp
